# annal

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  dependency-review.yml  publish.yml
contrib/: annal-service.ps1  annal.service  com.annal.server.plist  memex.service
docs/plans/: 2026-02-19-daemon-transport.md  2026-02-19-memex-design.md  2026-02-19-memex-implementation.md  2026-02-20-dashboard-design.md  2026-02-20-dashboard-plan.md  2026-02-20-feature-backlog.md  2026-02-20-spike3-design.md  2026-02-20-spike3-plan.md  2026-02-20-spike4-design.md  2026-02-20-spike4-plan.md  2026-02-21-spike-5-design.md  2026-02-21-spike-5-plan.md  2026-02-21-spike-6-design.md  2026-02-21-spike-6-plan.md  2026-02-21-spike-8-design.md  2026-02-21-spike-8-plan.md  2026-02-23-dashboard-polish-design.md  2026-02-23-dashboard-polish.md  2026-02-23-dashboard-redesign-design.md  2026-02-23-dashboard-redesign.md
docs/proposals/: vector-backend-abstraction.md
openspec/: config.yaml
openspec/specs/advanced-search/: spec.md
openspec/specs/bulk-operations/: spec.md
openspec/specs/cloud-sync/: spec.md
openspec/specs/retrieval-quality/: spec.md
src/annal/: __main__.py  backend.py  cli.py  config.py  embedder.py  events.py  indexer.py  migrate.py  pool.py  server.py  store.py  watcher.py
src/memex/: config.py  indexer.py  pool.py  server.py  store.py  watcher.py
tests/: conftest.py  test_backend_chromadb.py  test_backend_conformance.py  test_backend_qdrant.py  test_cli.py  test_config.py  test_dashboard.py  test_export_import.py  test_indexer.py  test_integration.py  test_integration_qdrant.py  test_migration.py  test_pool.py  test_server.py  test_store.py  test_watcher.py
(+22 files in other folders)
