[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "annal"
version = "0.1.0"
description = "Semantic memory server for AI agent teams"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "chromadb>=0.5.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
annal = "annal.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/annal"]
