[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "annal"
version = "0.4.1"
description = "Semantic memory server for AI agent teams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "heyhayes" },
]
keywords = ["mcp", "memory", "semantic-search", "ai-agents", "chromadb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "chromadb>=0.5.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/heyhayes/annal"
Repository = "https://github.com/heyhayes/annal"
Issues = "https://github.com/heyhayes/annal/issues"

[project.scripts]
annal = "annal.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/annal"]
